# multi-platform-publisher

./: .gitignore  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/browser/: automation.rs  chrome.rs  mod.rs
src-tauri/src/commands/: accounts.rs  chrome.rs  mod.rs  publish.rs
src-tauri/src/database/: mod.rs  queries.rs  schema.rs
src/components/: PlatformIcon.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/pages/: Accounts.tsx  Dashboard.tsx  History.tsx  NewPublish.tsx  SettingsPage.tsx  Templates.tsx
src/stores/: accountStore.ts  publishStore.ts  themeStore.ts
src/types/: index.ts
